# RustBook

./: README.md
1.2 celsius_farenheit/: Cargo.toml
1.3 guessing_game/: Cargo.toml  main  main.rs
10 generics_traits_lifetimes/src/: lib.rs  main.rs
11 tests/src/: lib.rs
11 tests/tests/: integration_test.rs
11 tests/tests/common/: mod.rs
12 io_project/src/: lib.rs  main.rs
13 iterators_closures/src/: main.rs
14 cargo_crates/add/add_one/src/: lib.rs
14 cargo_crates/add/adder/src/: main.rs
14 cargo_crates/src/: lib.rs  main.rs
15 smart_pointers/src/: lib.rs  main.rs
16 concurrency/src/: main.rs
17 fearless_concurrency/src/: main.rs
17 oop/src/: lib.rs  main.rs
18 patterns_matching/src/: main.rs
19 advanced/src/: main.rs
2 fundamentals/src/: main.rs
2 guessing_game/: main.rs
20 multithreaded_server/src/: lib.rs  main.rs
3 common_concepts/src/: main.rs
3 ownership/src/: main.rs
3.1 celsius_farenheit/src/: main.rs
3.2 nth_fib/src/: main.rs
4 ownership/src/: main.rs
4 structs/src/: main.rs
5 enums/src/: main.rs
5 structs/src/: main.rs
6 enums/src/: main.rs
6 pkgs_crates_modules/: Cargo.toml
6 pkgs_crates_modules/src/: front_of_house.rs  lib.rs  main.rs
7 collections/src/: main.rs
7 pkgs_crates_modules/src/: file_garden.rs  lib.rs  main.rs
7 pkgs_crates_modules/src/folder_garden/: mod.rs
8 collections/src/: main.rs
8 error_handling/src/: main.rs
9 error_handling/src/: main.rs
